src-tauri/tests/snapshots/edgetx__edgetx_golden_Hand210.snap
---
source: tests/edgetx.rs
expression: out
---
checksum: 4242
semver: 2.12.4
header: 
   name: "ALPHA 2"
   modelId: 
      0:
         val: 3
timers: 
   0:
      start: 0
      swtch: "L1"
      value: 0
      mode: ON
      countdownBeep: 0
      minuteBeep: 1
      persistent: 0
      countdownStart: 0
      showElapsed: 0
      extraHaptic: 0
      name: "FLT"
   1:
      start: 0
      swtch: "L1"
      value: 120
      mode: ON
      countdownBeep: 0
      minuteBeep: 1
      persistent: 0
      countdownStart: 0
      showElapsed: 0
      extraHaptic: 0
      name: "TOT"
telemetryProtocol: 0
thrTrim: 0
disableThrottleWarning: 0
displayChecklist: 1
extendedLimits: 1
disableTelemetryWarning: 0
checklistInteractive: 1
beepANACenter: 0
mixData: 
 -
   weight: 100
   destCh: 0
   srcRaw: Ail
   carryTrim: 0
   mixWarn: 0
   mltpx: ADD
   offset: 0
   swtch: "NONE"
   flightModes: 000000000
   delayUp: 0
   delayDown: 0
   speedUp: 0
   speedDown: 0
   name: ""
 -
   weight: 100
   destCh: 1
   srcRaw: Ele
   carryTrim: 0
   mixWarn: 0
   mltpx: ADD
   offset: 0
   swtch: "NONE"
   flightModes: 000000000
   delayUp: 0
   delayDown: 0
   speedUp: 0
   speedDown: 0
   name: ""
 -
   weight: 100
   destCh: 2
   srcRaw: I2
   carryTrim: 0
   mixWarn: 0
   mltpx: ADD
   offset: 0
   swtch: "NONE"
   flightModes: 000000000
   delayUp: 0
   delayDown: 0
   speedUp: 0
   speedDown: 0
   name: ""
 -
   weight: -100
   destCh: 2
   srcRaw: MAX
   carryTrim: 0
   mixWarn: 0
   mltpx: REPL
   offset: 0
   swtch: "L16"
   flightModes: 000000000
   delayUp: 0
   delayDown: 0
   speedUp: 0
   speedDown: 0
   name: ""
 -
   weight: 100
   destCh: 3
   srcRaw: Rud
   carryTrim: 0
   mixWarn: 0
   mltpx: ADD
   offset: 0
   swtch: "NONE"
   flightModes: 000000000
   delayUp: 0
   delayDown: 0
   speedUp: 0
   speedDown: 0
   name: ""
 -
   weight: 100
   destCh: 4
   srcRaw: SA
   carryTrim: 0
   mixWarn: 0
   mltpx: ADD
   offset: 0
   swtch: "NONE"
   flightModes: 000000000
   delayUp: 0
   delayDown: 0
   speedUp: 0
   speedDown: 0
   name: ""
 -
   weight: 100
   destCh: 5
   srcRaw: SB
   carryTrim: 0
   mixWarn: 0
   mltpx: ADD
   offset: 0
   swtch: "NONE"
   flightModes: 000000000
   delayUp: 0
   delayDown: 0
   speedUp: 0
   speedDown: 0
   name: ""
limitData: 
   0:
      min: 0
      max: 0
      ppmCenter: 0
      offset: 0
      symetrical: 0
      revert: 0
      curve: 32
      name: ""
   1:
      min: 0
      max: 0
      ppmCenter: 0
      offset: 0
      symetrical: 0
      revert: 0
      curve: 32
      name: ""
expoData: 
 -
   mode: 3
   scale: 0
   trimSource: 0
   srcRaw: "Rud"
   weight: 100
   offset: 0
   swtch: "NONE"
   curve: 
      type: 1
      value: 0
   chn: 0
   flightModes: 000000000
   name: ""
 -
   mode: 3
   scale: 0
   trimSource: 0
   srcRaw: "Ele"
   weight: 100
   offset: 0
   swtch: "NONE"
   curve: 
      type: 1
      value: 0
   chn: 1
   flightModes: 000000000
   name: ""
 -
   mode: 3
   scale: 0
   trimSource: 0
   srcRaw: "Thr"
   weight: 100
   offset: 0
   swtch: "NONE"
   curve: 
      type: 1
      value: 0
   chn: 2
   flightModes: 000000000
   name: ""
 -
   mode: 3
   scale: 0
   trimSource: 0
   srcRaw: "Ail"
   weight: 100
   offset: 0
   swtch: "NONE"
   curve: 
      type: 1
      value: 0
   chn: 3
   flightModes: 000000000
   name: ""
curves: 
   31:
      type: 1
      smooth: 0
      points: -1
      name: "CV"
points: 
   155:
      val: -100
   158:
      val: 100
logicalSw: 
   0:
      func: FUNC_VPOS
      def: "ch(4),0"
      andsw: "NONE"
      lsPersist: 0
      lsState: 0
      delay: 0
      duration: 0
   1:
      func: FUNC_AND
      def: "L4,L5"
      andsw: "NONE"
      lsPersist: 0
      lsState: 0
      delay: 0
      duration: 0
   3:
      func: FUNC_VPOS
      def: "tele(2),10"
      andsw: "NONE"
      lsPersist: 0
      lsState: 0
      delay: 0
      duration: 0
   4:
      func: FUNC_VNEG
      def: "tele(2),35"
      andsw: "NONE"
      lsPersist: 0
      lsState: 0
      delay: 20
      duration: 0
   9:
      func: FUNC_VPOS
      def: "tele(1),0"
      andsw: "NONE"
      lsPersist: 0
      lsState: 0
      delay: 0
      duration: 0
customFn: 
   0:
      swtch: "L1"
      func: PLAY_TRACK
      def: "armed,1,1x"
   1:
      swtch: "!L1"
      func: PLAY_TRACK
      def: "disarm,1,!1x"
   2:
      swtch: "TrimThrDown"
      func: PLAY_VALUE
      def: "Tmr1,1,1x"
   3:
      swtch: "SC2"
      func: PLAY_TRACK
      def: "launch,1,!1x"
   4:
      swtch: "L1"
      func: LOGS
      def: "1,1"
flightModeData: 
   0:
      trim: 
         0:
            value: 0
            mode: 31
         1:
            value: 0
            mode: 31
         2:
            value: 0
            mode: 31
         3:
            value: 0
            mode: 31
      name: ""
      swtch: "NONE"
      fadeIn: 0
      fadeOut: 0
      gvars: 
         0:
            val: 0
         1:
            val: 0
         2:
            val: 0
thrTraceSrc: Thr
switchWarning: 
   SA:
      pos: up
rssiSource: none
rfAlarms: 
   warning: 45
   critical: 42
thrTrimSw: 0
potsWarnMode: WARN_OFF
jitterFilter: GLOBAL
moduleData: 
   0:
      type: TYPE_CROSSFIRE
      subType: 0
      channelsStart: 0
      channelsCount: 16
      failsafeMode: NOT_SET
      mod: 
         crsf: 
            telemetryBaudrate: 0
trainerData: 
   mode: SLAVE
   channelsStart: 0
   channelsCount: 0
inputNames: 
   0:
      val: "Rud"
   1:
      val: "Ele"
telemetrySensors: 
   0:
      id1: 
         id: 20
      id2: 
         instance: 0
      label: "1RSS"
      subId: 0
      type: TYPE_CUSTOM
      unit: 1
      prec: 1
      autoOffset: 0
      filter: 0
      logs: 1
      persistent: 0
      onlyPositive: 0
      cfg: 
         custom: 
            ratio: 0
            offset: 0
   1:
      id1: 
         id: 20
      id2: 
         instance: 0
      label: "RQly"
      subId: 0
      type: TYPE_CUSTOM
      unit: 1
      prec: 1
      autoOffset: 0
      filter: 0
      logs: 1
      persistent: 0
      onlyPositive: 0
      cfg: 
         custom: 
            ratio: 0
            offset: 0
   2:
      id1: 
         id: 8
      id2: 
         instance: 0
      label: "RxBt"
      subId: 0
      type: TYPE_CUSTOM
      unit: 1
      prec: 1
      autoOffset: 0
      filter: 0
      logs: 1
      persistent: 0
      onlyPositive: 0
      cfg: 
         custom: 
            ratio: 0
            offset: 0
   3:
      id1: 
         id: 8
      id2: 
         instance: 0
      label: "Capa"
      subId: 0
      type: TYPE_CUSTOM
      unit: 1
      prec: 1
      autoOffset: 0
      filter: 0
      logs: 1
      persistent: 0
      onlyPositive: 0
      cfg: 
         custom: 
            ratio: 0
            offset: 0
screens: 
   0:
      type: VALUES
      u: 
         lines: 
            0:
               sources: 
                  0:
                     val: tele(2)
                  1:
                     val: Tmr2
   1:
      type: SCRIPT
      u: 
         script: 
            file: "volt"
view: 0
modelRegistrationID: "TESTREG1"
usbJoystickIfMode: JOYSTICK
modelSFDisabled: GLOBAL
